# laboratory2_autumn2025

./: CMakeLists.txt  main.cpp
.github/workflows/: cicd.yml
